Upgrade to Java 11
Signed-off-by: Jason Winning <jason.winning@gmail.com>